Easy zoom toggle keybinding added in ".tmux.conf"

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,9 @@ set -g pane-base-index 1
 set -g status-interval 5
 
 # vertical and horizontal split
+bind b resize-pane -Z
+
+# vertical and horizontal split
 bind v split-window -h
 bind h split-window -v
 
