--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -4,6 +4,9 @@ set -g default-terminal "screen-256color"
 # Tell TMUX that outside terminal supports true color ($TERM outside TMUX must be xterm-256color)
 set -ga terminal-overrides ",xterm-256color*:Tc"
 
+#Set mouse suport
+set -g mouse on
+
 # source .tmux.conf file
 bind r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
 
