--- a/files/.config/alacritty/alacritty.yml
+++ b/files/.config/alacritty/alacritty.yml
@@ -108,7 +108,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    family: Fira Code
+    family: Source Code Pro
 
     # The `style` can be specified to pick a specific face.
     style: Regular
