--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -4,6 +4,12 @@ set -g default-terminal "screen-256color"
 # Tell TMUX that outside terminal supports true color ($TERM outside TMUX must be xterm-256color)
 set -ga terminal-overrides ",xterm-256color*:Tc"
 
+#Set copy mode as vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+# bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+# bind -T copy-mode-vi Enter 'y' send -X copy-selection-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel "xclip -sel clip -i"
+
 #Set mouse suport
 set -g mouse on
 
