Change bindings in tmux config file
Remove switch pane bindings to use them to switch previous and next window
in tmux

--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -39,16 +39,21 @@ bind h split-window -v
 set-window-option -g allow-rename off
 
 # Switch betewen panes using alt + arrow
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
+# bind -n M-h select-pane -L
+# bind -n M-l select-pane -R
+# bind -n M-k select-pane -U
+# bind -n M-j select-pane -D
 
 # Move around panes with hjkl, as one would in vim after pressing ctrl + w
+# (conflict with split window horizontally)
 #bind h select-pane -L
 #bind j select-pane -D
 #bind k select-pane -U
 #bind l select-pane -R
+
+
+bind -n M-h previous-window
+bind -n M-l next-window
 
 #Color theme:
 
