--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -4,11 +4,9 @@ set -g default-terminal "screen-256color"
 # Tell TMUX that outside terminal supports true color ($TERM outside TMUX must be xterm-256color)
 set -ga terminal-overrides ",xterm-256color*:Tc"
 
-#Set copy mode as vi
+#Set copy mode as vi (need xclip installed)
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-# bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
-# bind -T copy-mode-vi Enter 'y' send -X copy-selection-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel "xclip -sel clip -i"
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 #Set mouse suport
 set -g mouse on
