Maintenance to de repo
- Got rid of stuff that I don't use anymore
- Some configs changed
- New config files added

--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -6,13 +6,13 @@
 [diff]
     tool = nvimdiff
 [difftool "nvimdiff"]
-    cmd = "nvim -d -u ~/.config/nvim/init.vim \"$LOCAL\" \"$REMOTE\""
+    cmd = "nvim -d -u ~/.config/nvim/init.vim \"$REMOTE\" \"$LOCAL\""
 [merge]
 	tool = nvimdiff
 	conflictstyle = diff3
 [mergetool "nvimdiff"]
-    ;cmd = "nvim -d -u ~/.config/nvim/init.vim \"$LOCAL\" \"$MERGED\" \"$REMOTE\""
-    cmd = nvim -d $LOCAL $REMOTE $MERGED -c '$wincmd w' -c 'wincmd J'
+    cmd = "nvim -d -u ~/.config/nvim/init.vim \"$REMOTE\" \"$LOCAL\" \"$MERGED\""
+    ; cmd = nvim -d $LOCAL $REMOTE $MERGED -c '$wincmd w' -c 'wincmd J'
 [difftool]
 	prompt = false
 [mergetool]
