--- a/files/.config/kitty/kitty.conf
+++ b/files/.config/kitty/kitty.conf
@@ -1067,3 +1067,7 @@ background_opacity 0.8
 #: }}}
 
 # }}}
+
+map ctrl+plus     change_font_size all +2.0
+map ctrl+minus     change_font_size all -2.0
+map ctrl+backspace change_font_size all 0
