--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -55,13 +55,21 @@ bind -n M-l next-window
 
 #Color theme:
 
-# Colors for command mode
-set -g message-command-bg 'colour51'
-set -g message-command-fg 'colour0'
+# Colors for command mode (tmux < 2.9)
+# set -g message-command-bg 'colour51'
+# set -g message-command-fg 'colour0'
 
-# Colors for message in the status bar
-set -g message-bg 'colour51'
-set -g message-fg 'colour0'
+# Colors for message in the status bar (tmux < 2.9)
+# set -g message-bg 'colour51'
+# set -g message-fg 'colour0'
+
+# Colors for command mode (tmux 2.9)
+set -g message-command-style bg='colour51'
+set -g message-command-style fg='colour0'
+
+# Colors for message in the status bar (tmux 2.9)
+set -g message-style bg='colour51'
+set -g message-style fg='colour0'
 
 # Make active pane border blue
 set -g pane-active-border-style fg=colour82
