--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -166,13 +166,16 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        # status_command i3blocks -c ~/.config/i3/i3blocks.conf
-        #Look up for py3status (wraper for i3status)
-        status_command i3status
-        position top
-        font pango:Fira Code 9
-}
+#bar {
+#        # status_command i3blocks -c ~/.config/i3/i3blocks.conf
+#        #Look up for py3status (wraper for i3status)
+#        status_command i3status
+#        position top
+#        font pango:Fira Code 9
+#}
+
+# Uses polybar instead i3status or i3blocks
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # My adds ====================================================================
 
