--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -166,21 +166,21 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-#bar {
-#        # status_command i3blocks -c ~/.config/i3/i3blocks.conf
-#        #Look up for py3status (wraper for i3status)
-#        status_command i3status
-#        position top
-#        font pango:Fira Code 9
-#}
+bar {
+        # status_command i3blocks -c ~/.config/i3/i3blocks.conf
+        #Look up for py3status (wraper for i3status)
+        status_command i3status
+        position top
+        font pango:Fira Code 9
+}
 
 # Uses polybar instead i3status or i3blocks
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+# exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # My adds ====================================================================
 
 # For opacity support
-exec --no-startup-id compton -b
+# exec --no-startup-id compton -b
 
 bindsym $mod+p exec pavucontrol
 
@@ -212,8 +212,8 @@ workspace $ws10 output VGA-1
 bindsym Print exec gnome-screenshot -i
 
 # Screen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20
+# bindsym XF86MonBrightnessUp exec xbacklight -inc 20
+# bindsym XF86MonBrightnessDown exec xbacklight -dec 20
 
 # Volume controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id ~/.scripts/volume_control.sh +5%
@@ -231,7 +231,7 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 #Gaps ========================================================================
-#for_window [class="^.*"] border pixel 0
-#gaps inner 10
-#gaps outer 10
-#smart_gaps on
+for_window [class="^.*"] border pixel 3
+gaps inner 10
+gaps outer 10
+smart_gaps on
