.zshrc and i3 config file modified
- Config added in .zshrc to autostart graphical environment (uses xinit
and launches i3wm)

- Removes circular scrolling and kill window shortcut changed in i3
  config file

--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -34,7 +34,7 @@ floating_modifier $mod
 bindsym $mod+Return exec kitty
 
 # kill focused window
-bindsym $mod+q kill
+bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
@@ -193,7 +193,6 @@ exec_always --no-startup-id nm-applet
 exec_always --no-startup-id blueman-applet
 
 # Scripts and "services"
-exec_always --no-startup-id ~/.scripts/circular_scrolling.sh
 exec_always --no-startup-id ~/.scripts/battery.py
 
 # Key bindings
