--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -1,85 +1,74 @@
 # Set TMUX to get true color support
 set -g default-terminal "screen-256color"
 
-# Tell TMUX that outside terminal supports true color ($TERM outside TMUX must be xterm-256color)
+# Tell TMUX that outside terminal supports true color ($TERM outside TMUX must
+# be xterm-256color)
 set -ga terminal-overrides ",xterm-256color*:Tc"
 
-#Set copy mode as vi (need xclip installed)
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+# Use vim keybindings in copy mode
+set-window-option -g mode-keys vi
 
-#Set mouse suport
+# VIM key bindings to select and copy text to system clipboard
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "xclip -i -selection clipboard"
+
+# Set mouse suport
 set -g mouse on
 
-# source .tmux.conf file
+# Source .tmux.conf file
 bind r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
 
 # Helps in faster key repetition
 set -sg escape-time 0
 
-# Start window number from 1 rather than 0
-set -g base-index 1
-
-# Start pane number from 1 rather than 0
-set -g pane-base-index 1
-
 # Refresh status line every 5 seconds - Good for when music is playing / update time etc
 set -g status-interval 5
 
-# vertical and horizontal split
+# Resize vertical and horizontal split
 bind b resize-pane -Z
 
-# vertical and horizontal split
-bind v split-window -h
-bind h split-window -v
-
-# don't allow tmux to rename the window based on commands running
+# Don't allow tmux to rename the window based on the content
 set-window-option -g allow-rename off
 
-# Switch betewen panes using alt + arrow
-# bind -n M-h select-pane -L
-# bind -n M-l select-pane -R
-# bind -n M-k select-pane -U
-# bind -n M-j select-pane -D
+# Move around panes with prefix + hjkl (conflict with horizontal split if it is
+# used)
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
 
-# Move around panes with hjkl, as one would in vim after pressing ctrl + w
-# (conflict with split window horizontally)
-#bind h select-pane -L
-#bind j select-pane -D
-#bind k select-pane -U
-#bind l select-pane -R
-
-
+# Switch between windows
 bind -n M-h previous-window
 bind -n M-l next-window
 
+# Split vertically and horizontally
+bind v split-window -h
+bind h split-window -v
+
 #Color theme:
 
-# Colors for command mode (tmux < 2.9)
-# set -g message-command-bg 'colour51'
-# set -g message-command-fg 'colour0'
+# Colors for message/command mode in the status bar
+#(tmux < 2.9)
+set -g message-bg 'colour51'
+set -g message-fg 'colour0'
+#(tmux 2.9)
+# set -g message-style bg=colour51
+# set -g message-style fg=colour0
+# set -g message-command-style bg=colour51
+# set -g message-command-style fg=colour0
 
-# Colors for message in the status bar (tmux < 2.9)
-# set -g message-bg 'colour51'
-# set -g message-fg 'colour0'
-
-# Colors for command mode (tmux 2.9)
-set -g message-command-style bg='colour51'
-set -g message-command-style fg='colour0'
-
-# Colors for message in the status bar (tmux 2.9)
-set -g message-style bg='colour51'
-set -g message-style fg='colour0'
+# Set color for modes
+setw -g mode-style 'bg=colour51 fg=colour0'
 
 # Make active pane border blue
-set -g pane-active-border-style fg=colour82
+set -g pane-active-border-style 'bg=colour0 fg=colour51'
 
 # Set the left and right status
-set -g status-left '#[bg=colour0]#[fg=colour51]#{?client_prefix,#[bg=colour2],} #S #[bg=colour0]#[fg=colour7]#{?client_prefix,#[fg=colour2],}'
+set -g status-left '#[bg=colour0]#[fg=colour51]#{?client_prefix,#[bg=colour51]#[fg=colour0],} #S #[bg=colour0]#[fg=colour51]#{?client_prefix,#[bg=colour51]#[fg=colour0],}'
 set -g status-right '#[bg=colour0]#[fg=colour51] %b %d %H:%M '
 
 # Set the background color
-set -g status-bg colour0
+set -g status-bg 'colour0'
 
 # Customize how windows are displayed in the status line
 set -g window-status-current-format "#[fg=colour0]#[bg=colour51] #I*:#[fg=colour0]#W "
