Config added in VSCode config file

--- a/files/.config/Code/User/settings.json
+++ b/files/.config/Code/User/settings.json
@@ -66,6 +66,24 @@
             "commands": [
                 ":noh"
             ]
+        },
+        {
+            "before": [
+                "<leader>",
+                "r"
+            ],
+            "commands": [
+                "editor.action.startFindReplaceAction"
+            ]
+        },
+        {
+            "before": [
+                "<leader>",
+                "R"
+            ],
+            "commands": [
+                "workbench.action.replaceInFiles"
+            ]
         }
     ],
     "vim.leader": "<SPACE>",
