Command and message colors fixed in Tmux config file

--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -49,13 +49,11 @@ bind h split-window -v
 
 # Colors for message/command mode in the status bar
 #(tmux < 2.9)
-set -g message-bg 'colour51'
-set -g message-fg 'colour0'
+# set -g message-bg 'colour51'
+# set -g message-fg 'colour0'
 #(tmux 2.9)
-# set -g message-style bg=colour51
-# set -g message-style fg=colour0
-# set -g message-command-style bg=colour51
-# set -g message-command-style fg=colour0
+set -g message-style bg=colour51,fg=colour0
+set -g message-command-style bg=colour51,fg=colour0
 
 # Set color for modes
 setw -g mode-style 'bg=colour51 fg=colour0'
