TPM and nord theme added to tmux config file

--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -48,26 +48,33 @@ bind h split-window -v
 #Color theme:
 
 # Colors for message/command mode in the status bar
-#(tmux < 2.9)
-# set -g message-bg 'colour51'
-# set -g message-fg 'colour0'
-#(tmux 2.9)
-set -g message-style bg=colour51,fg=colour0
-set -g message-command-style bg=colour51,fg=colour0
+# set -g message-style bg=colour51,fg=colour0
+# set -g message-command-style bg=colour51,fg=colour0
 
 # Set color for modes
-setw -g mode-style 'bg=colour51 fg=colour0'
+# setw -g mode-style 'bg=colour51 fg=colour0'
 
 # Make active pane border blue
-set -g pane-active-border-style 'bg=colour0 fg=colour51'
+# set -g pane-active-border-style 'bg=colour0 fg=colour51'
 
 # Set the left and right status
-set -g status-left '#[bg=colour0]#[fg=colour51]#{?client_prefix,#[bg=colour51]#[fg=colour0],} #S #[bg=colour0]#[fg=colour51]#{?client_prefix,#[bg=colour51]#[fg=colour0],}'
-set -g status-right '#[bg=colour0]#[fg=colour51] %b %d %H:%M '
+# set -g status-left '#[bg=colour0]#[fg=colour51]#{?client_prefix,#[bg=colour51]#[fg=colour0],} #S #[bg=colour0]#[fg=colour51]#{?client_prefix,#[bg=colour51]#[fg=colour0],}'
+# set -g status-right '#[bg=colour0]#[fg=colour51] %b %d %H:%M '
 
 # Set the background color
-set -g status-bg 'colour0'
+# set -g status-bg 'colour0'
 
 # Customize how windows are displayed in the status line
-set -g window-status-current-format "#[fg=colour0]#[bg=colour51] #I*:#[fg=colour0]#W "
-set -g window-status-format "#[fg=colour51]#[bg=colour0] #I:#[fg=colour51]#W "
+# set -g window-status-current-format "#[fg=colour0]#[bg=colour51] #I*:#[fg=colour0]#W "
+# set -g window-status-format "#[fg=colour51]#[bg=colour0] #I:#[fg=colour51]#W "
+
+
+# TPM (Tmux Plugin manager) ---------------------------------------------------
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin "arcticicestudio/nord-tmux"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
