--- a/files/.config/kitty/kitty.conf
+++ b/files/.config/kitty/kitty.conf
@@ -23,7 +23,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 11.0
 
 #: Font size (in pts)
 
@@ -468,7 +468,7 @@ disable_ligatures never
 
 #: The foreground and background colors
 
-background_opacity 1.0
+background_opacity 0.90
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -594,7 +594,7 @@ background_opacity 1.0
 #: you want to prevent programs running on a remote computer over ssh
 #: from controlling kitty.
 
-# env 
+# env
 
 #: Specify environment variables to set in all child processes. Note
 #: that environment variables are expanded recursively, so if you
@@ -1070,45 +1070,85 @@ background_opacity 1.0
 
 map ctrl+plus     change_font_size all +2.0
 map ctrl+minus     change_font_size all -2.0
-map ctrl+backspace change_font_size all 0
+map ctrl+0 change_font_size all 0
 
 # Nord theme - ported from https://github.com/arcticicestudio/nord-hyper
 
-foreground            #D8DEE9
-background            #2E3440
-selection_foreground  #000000
-selection_background  #FFFACD
-url_color             #0087BD
-cursor                #81A1C1
+# foreground            #D8DEE9
+# background            #2E3440
+# selection_foreground  #2E3440
+# selection_background  #D8DEE9
+# cursor                #D8DEE9
+
+# # black
+# color0   #3B4252
+# color8   #4C566A
+
+# # red
+# color1   #BF616A
+# color9   #BF616A
+
+# # green
+# color2   #A3BE8C
+# color10  #A3BE8C
+
+# # yellow
+# color3   #EBCB8B
+# color11  #EBCB8B
+
+# # blue
+# color4  #81A1C1
+# color12 #81A1C1
+
+# # magenta
+# color5   #B48EAD
+# color13  #B48EAD
+
+# # cyan
+# color6   #88C0D0
+# color14  #8FBCBB
+
+# # white
+# color7   #E5E9F0
+# color15  #ECEFF4
+
+# Gotham theme "oficial" ------------------------------------------------------
+
+foreground            #98D1CE
+background            #0A0F14
+selection_foreground  #0A0F14
+selection_background  #98D1CE
+url_color             #26A98B
+cursor                #98D1CE
 
 # black
-color0   #3B4252
-color8   #4C566A
+color0   #0A0F14
+color8   #10151B
 
 # red
-color1   #BF616A
-color9   #BF616A
+color1   #C33027
+color9   #D26939
 
 # green
-color2   #A3BE8C
-color10  #A3BE8C
+color2   #26A98B
+color10  #081F2D
 
 # yellow
-color3   #EBCB8B
-color11  #EBCB8B
+color3   #EDB54B
+color11  #245361
 
 # blue
-color4  #81A1C1
-color12 #81A1C1
+color4  #195465
+color12 #093748
 
 # magenta
-color5   #B48EAD
-color13  #B48EAD
+color5   #4E5165
+color13  #888BA5
 
 # cyan
-color6   #88C0D0
-color14  #8FBCBB
+color6   #33859D
+color14  #599CAA
 
 # white
-color7   #E5E9F0
-color15  #B48EAD
+color7   #98D1CE
+color15  #D3EBE9
