Files modified to set nord theme across all the tools/system

--- a/files/.config/kitty/kitty.conf
+++ b/files/.config/kitty/kitty.conf
@@ -1072,83 +1072,84 @@ map ctrl+plus     change_font_size all +2.0
 map ctrl+minus     change_font_size all -2.0
 map ctrl+0 change_font_size all 0
 
-# Nord theme - ported from https://github.com/arcticicestudio/nord-hyper
+# Nord theme ------------------------------------------------------------------
+# (ported from https://github.com/arcticicestudio/nord-alacritty)
 
-# foreground            #D8DEE9
-# background            #2E3440
-# selection_foreground  #2E3440
-# selection_background  #D8DEE9
-# cursor                #D8DEE9
+foreground            #D8DEE9
+background            #2E3440
+selection_foreground  #2E3440
+selection_background  #D8DEE9
+cursor                #D8DEE9
 
-# # black
-# color0   #3B4252
-# color8   #4C566A
+# black
+color0   #3B4252
+color8   #4C566A
 
-# # red
-# color1   #BF616A
-# color9   #BF616A
+# red
+color1   #BF616A
+color9   #BF616A
 
-# # green
-# color2   #A3BE8C
-# color10  #A3BE8C
+# green
+color2   #A3BE8C
+color10  #A3BE8C
 
-# # yellow
-# color3   #EBCB8B
-# color11  #EBCB8B
+# yellow
+color3   #EBCB8B
+color11  #EBCB8B
 
-# # blue
-# color4  #81A1C1
-# color12 #81A1C1
+# blue
+color4  #81A1C1
+color12 #81A1C1
 
-# # magenta
-# color5   #B48EAD
-# color13  #B48EAD
+# magenta
+color5   #B48EAD
+color13  #B48EAD
 
-# # cyan
-# color6   #88C0D0
-# color14  #8FBCBB
+# cyan
+color6   #88C0D0
+color14  #8FBCBB
 
-# # white
-# color7   #E5E9F0
-# color15  #ECEFF4
+# white
+color7   #E5E9F0
+color15  #ECEFF4
 
 # Gotham theme "oficial" ------------------------------------------------------
 
-foreground            #98D1CE
-background            #0A0F14
-selection_foreground  #0A0F14
-selection_background  #98D1CE
-url_color             #26A98B
-cursor                #98D1CE
+# foreground            #98D1CE
+# background            #0A0F14
+# selection_foreground  #0A0F14
+# selection_background  #98D1CE
+# url_color             #26A98B
+# cursor                #98D1CE
 
-# black
-color0   #0A0F14
-color8   #10151B
+# # black
+# color0   #0A0F14
+# color8   #10151B
 
-# red
-color1   #C33027
-color9   #D26939
+# # red
+# color1   #C33027
+# color9   #D26939
 
-# green
-color2   #26A98B
-color10  #081F2D
+# # green
+# color2   #26A98B
+# color10  #081F2D
 
-# yellow
-color3   #EDB54B
-color11  #245361
+# # yellow
+# color3   #EDB54B
+# color11  #245361
 
-# blue
-color4  #195465
-color12 #093748
+# # blue
+# color4  #195465
+# color12 #093748
 
-# magenta
-color5   #4E5165
-color13  #888BA5
+# # magenta
+# color5   #4E5165
+# color13  #888BA5
 
-# cyan
-color6   #33859D
-color14  #599CAA
+# # cyan
+# color6   #33859D
+# color14  #599CAA
 
-# white
-color7   #98D1CE
-color15  #D3EBE9
+# # white
+# color7   #98D1CE
+# color15  #D3EBE9
