--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -10,7 +10,7 @@ set-window-option -g mode-keys vi
 
 # VIM key bindings to select and copy text to system clipboard
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe "xclip -i -selection clipboard"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "xsel -i --clipboard"
 
 # Set mouse suport
 set -g mouse on
