--- a/files/.config/kitty/kitty.conf
+++ b/files/.config/kitty/kitty.conf
@@ -6,9 +6,9 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Fira Code
-bold_font        auto
-italic_font      auto
+font_family      Fira Code Regular Nerd Font Complete
+bold_font        Fira Code Bold Nerd Font Complete
+italic_font      Fira Code Light Nerd Font Complete
 bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
