Tmux config cleaned

--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -1,22 +1,15 @@
-# Set TMUX to get true color support
-set -g default-terminal "screen-256color"
+# If my terminal supports 256 colors (it also allows italics)
+set -g default-terminal "tmux-256color"
 
-# Tell TMUX that outside terminal supports true color ($TERM outside TMUX must
-# be xterm-256color)
-set -ga terminal-overrides ",xterm-256color*:Tc"
-
-# Use vim keybindings in copy mode
-set-window-option -g mode-keys vi
+# If my terminal supports 24-bit color ("xterm-kitty" it the value of $TERM outside Tmux)
+set -ga terminal-overrides ",xterm-kitty:Tc"
 
 # VIM key bindings to select and copy text to system clipboard
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe "xsel -i --clipboard"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
 
 # Set mouse suport
 set -g mouse on
-
-# Source .tmux.conf file
-bind r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
 
 # Helps in faster key repetition
 set -sg escape-time 0
@@ -24,47 +17,35 @@ set -sg escape-time 0
 # Refresh status line every 5 seconds - Good for when music is playing / update time etc
 set -g status-interval 5
 
-# Resize vertical and horizontal split
-bind b resize-pane -Z
-
 # Don't allow tmux to rename the window based on the content
 set-window-option -g allow-rename off
 
-# Move around panes with prefix + hjkl (conflict with horizontal split if it is
-# used)
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
-
-# Switch between windows
-bind -n M-h previous-window
-bind -n M-l next-window
-
-# Split vertically and horizontally
-bind v split-window -h
-bind h split-window -v
+# Move around panes with prefix + hjkl (vim style)
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 #Color theme:
 
-# Colors for message/command mode in the status bar
+# # Colors for message/command mode in the status bar
 # set -g message-style bg=colour51,fg=colour0
 # set -g message-command-style bg=colour51,fg=colour0
 
-# Set color for modes
+# # Set color for modes
 # setw -g mode-style 'bg=colour51 fg=colour0'
 
-# Make active pane border blue
+# # Make active pane border blue
 # set -g pane-active-border-style 'bg=colour0 fg=colour51'
 
-# Set the left and right status
+# # Set the left and right status
 # set -g status-left '#[bg=colour0]#[fg=colour51]#{?client_prefix,#[bg=colour51]#[fg=colour0],} #S #[bg=colour0]#[fg=colour51]#{?client_prefix,#[bg=colour51]#[fg=colour0],}'
 # set -g status-right '#[bg=colour0]#[fg=colour51] %b %d %H:%M '
 
-# Set the background color
+# # Set the background color
 # set -g status-bg 'colour0'
 
-# Customize how windows are displayed in the status line
+# # Customize how windows are displayed in the status line
 # set -g window-status-current-format "#[fg=colour0]#[bg=colour51] #I*:#[fg=colour0]#W "
 # set -g window-status-format "#[fg=colour51]#[bg=colour0] #I:#[fg=colour51]#W "
 
@@ -73,8 +54,7 @@ bind h split-window -v
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin "arcticicestudio/nord-tmux"
+set -g @plugin 'egel/tmux-gruvbox'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
