Font changed and gruvbox themes added (kitty config)

--- a/files/.config/kitty/kitty.conf
+++ b/files/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Fira Code Regular
-bold_font        Fira Code Bold
-italic_font      Fira Code Light
-bold_italic_font auto
+font_family      JetBrains Mono Regular
+bold_font        JetBrains Mono Bold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -1075,43 +1075,43 @@ map ctrl+0 change_font_size all 0
 # Nord theme ------------------------------------------------------------------
 # (ported from https://github.com/arcticicestudio/nord-alacritty)
 
-foreground            #D8DEE9
-background            #2E3440
-selection_foreground  #2E3440
-selection_background  #D8DEE9
-cursor                #D8DEE9
+# foreground            #D8DEE9
+# background            #2E3440
+# selection_foreground  #2E3440
+# selection_background  #D8DEE9
+# cursor                #D8DEE9
 
-# black
-color0   #3B4252
-color8   #4C566A
+# # black
+# color0   #3B4252
+# color8   #4C566A
 
-# red
-color1   #BF616A
-color9   #BF616A
+# # red
+# color1   #BF616A
+# color9   #BF616A
 
-# green
-color2   #A3BE8C
-color10  #A3BE8C
+# # green
+# color2   #A3BE8C
+# color10  #A3BE8C
 
-# yellow
-color3   #EBCB8B
-color11  #EBCB8B
+# # yellow
+# color3   #EBCB8B
+# color11  #EBCB8B
 
-# blue
-color4  #81A1C1
-color12 #81A1C1
+# # blue
+# color4  #81A1C1
+# color12 #81A1C1
 
-# magenta
-color5   #B48EAD
-color13  #B48EAD
+# # magenta
+# color5   #B48EAD
+# color13  #B48EAD
 
-# cyan
-color6   #88C0D0
-color14  #8FBCBB
+# # cyan
+# color6   #88C0D0
+# color14  #8FBCBB
 
-# white
-color7   #E5E9F0
-color15  #ECEFF4
+# # white
+# color7   #E5E9F0
+# color15  #ECEFF4
 
 # Gotham theme "oficial" ------------------------------------------------------
 
@@ -1153,3 +1153,81 @@ color15  #ECEFF4
 # # white
 # color7   #98D1CE
 # color15  #D3EBE9
+
+# Gruvbox theme (dark) --------------------------------------------------------
+
+foreground            #ebdbb2
+background            #1d2021
+selection_foreground  #1d2021
+selection_background  #ebdbb2
+
+# black
+color0   #282828
+color8   #928374
+
+# red
+color1   #cc241d
+color9   #fb4934
+
+# green
+color2   #98971a
+color10  #b8bb26
+
+# yellow
+color3   #d79921
+color11  #fabd2f
+
+# blue
+color4  #458588
+color12 #83a598
+
+# magenta
+color5   #b16286
+color13  #d3869b
+
+# cyan
+color6   #689d6a
+color14  #8ec07c
+
+# white
+color7   #a89984
+color15  #ebdbb2
+
+# Gruvbox theme (light) -------------------------------------------------------
+
+# foreground            #3c3836
+# background            #f9f5d7
+# selection_foreground  #3c3836
+# selection_background  #f9f5d7
+
+# # black
+# color0   #fbf1c7
+# color8   #928374
+
+# # red
+# color1   #cc241d
+# color9   #9d0006
+
+# # green
+# color2   #98971a
+# color10  #79740e
+
+# # yellow
+# color3   #d79921
+# color11  #b57614
+
+# # blue
+# color4  #458588
+# color12 #076678
+
+# # magenta
+# color5   #b16286
+# color13  #8f3f71
+
+# # cyan
+# color6   #689d6a
+# color14  #427b58
+
+# # white
+# color7   #7c6f64
+# color15  #3c3836
