--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -4,9 +4,11 @@ set -g default-terminal "tmux-256color"
 # If my terminal supports 24-bit color ("xterm-kitty" it the value of $TERM outside Tmux)
 set -ga terminal-overrides ",xterm-kitty:Tc"
 
+# Move with VIM keybindings in copy mode
+set-window-option -g mode-keys vi
+
 # VIM key bindings to select and copy text to system clipboard
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
 
 # Set mouse suport
 set -g mouse on
@@ -54,7 +56,9 @@ bind l select-pane -R
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'egel/tmux-gruvbox'
+# set -g @plugin 'egel/tmux-gruvbox'
+set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
