--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -56,8 +56,8 @@ bind l select-pane -R
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'egel/tmux-gruvbox'
-# set -g @plugin 'arcticicestudio/nord-tmux'
+# set -g @plugin 'egel/tmux-gruvbox'
+set -g @plugin 'arcticicestudio/nord-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
