Oceanic Next theme added in kitty.conf

--- a/files/.config/kitty/kitty.conf
+++ b/files/.config/kitty/kitty.conf
@@ -1075,43 +1075,43 @@ map ctrl+0 change_font_size all 0
 # Nord theme ------------------------------------------------------------------
 # (ported from https://github.com/arcticicestudio/nord-alacritty)
 
-foreground            #D8DEE9
-background            #2E3440
-selection_foreground  #2E3440
-selection_background  #D8DEE9
-cursor                #D8DEE9
+# foreground            #D8DEE9
+# background            #2E3440
+# selection_foreground  #2E3440
+# selection_background  #D8DEE9
+# cursor                #D8DEE9
 
-# black
-color0   #3B4252
-color8   #4C566A
+# # black
+# color0   #3B4252
+# color8   #4C566A
 
-# red
-color1   #BF616A
-color9   #BF616A
+# # red
+# color1   #BF616A
+# color9   #BF616A
 
-# green
-color2   #A3BE8C
-color10  #A3BE8C
+# # green
+# color2   #A3BE8C
+# color10  #A3BE8C
 
-# yellow
-color3   #EBCB8B
-color11  #EBCB8B
+# # yellow
+# color3   #EBCB8B
+# color11  #EBCB8B
 
-# blue
-color4  #81A1C1
-color12 #81A1C1
+# # blue
+# color4  #81A1C1
+# color12 #81A1C1
 
-# magenta
-color5   #B48EAD
-color13  #B48EAD
+# # magenta
+# color5   #B48EAD
+# color13  #B48EAD
 
-# cyan
-color6   #88C0D0
-color14  #8FBCBB
+# # cyan
+# color6   #88C0D0
+# color14  #8FBCBB
 
-# white
-color7   #E5E9F0
-color15  #ECEFF4
+# # white
+# color7   #E5E9F0
+# color15  #ECEFF4
 
 # Gotham theme "oficial" ------------------------------------------------------
 
@@ -1231,3 +1231,42 @@ color15  #ECEFF4
 # # white
 # color7   #7c6f64
 # color15  #3c3836
+
+# Oceanic Next theme ----------------------------------------------------------
+
+foreground            #d8dee9
+background            #1b2b34
+selection_foreground  #d8dee9
+selection_background  #1b2b34
+
+# black
+color0   #29414f
+color8   #405860
+
+# red
+color1   #ec5f67
+color9   #ec5f67
+
+# green
+color2   #99c794
+color10  #99c794
+
+# yellow
+color3   #fac863
+color11  #fac863
+
+# blue
+color4  #6699cc
+color12 #6699cc
+
+# magenta
+color5   #c594c5
+color13  #c594c5
+
+# cyan
+color6   #5fb3b3
+color14  #5fb3b3
+
+# white
+color7   #65737e
+color15  #adb5c0
