--- a/files/.scripts/suspend_and_hybrid-sleep@.service
+++ b/files/.scripts/suspend_and_hybrid-sleep@.service
@@ -1,6 +1,6 @@
-# This should be copied to /etc/systemd/system/ (at least in Arch Linux)
-# %I is the user defined when the service is enabled (suspend_and_hybrid-sleep@USER.service)
-# To activate this service just type "sudo systemctl enable suspend_and_hybrid-sleep@USER.service"
+# This should be copied to /etc/systemd/system/ (at least in Arch Linux).
+# %I is the user defined when the service is enabled (suspend_and_hybrid-sleep@USER.service).
+# To activate this service just type "sudo systemctl enable suspend_and_hybrid-sleep@USER.service".
 
 [Unit]
 Description=Suspend and hybrid-sleep actions for antonhub user
