--- a/files/.config/alacritty/alacritty.yml
+++ b/files/.config/alacritty/alacritty.yml
@@ -790,70 +790,70 @@ cursor:
 #     white: '#aeb3bb'
 
 
-# Oceanic Next theme
-colors:
-  # Default colors
-  primary:
-    background: '#1b2b34'
-    foreground: '#d8dee9'
-
-  # Normal colors
-  normal:
-    black:   '#29414f'
-    red:     '#ec5f67'
-    green:   '#99c794'
-    yellow:  '#fac863'
-    blue:    '#6699cc'
-    magenta: '#c594c5'
-    cyan:    '#5fb3b3'
-    white:   '#65737e'
-
-  # Bright colors
-  bright:
-    black:   '#405860'
-    red:     '#ec5f67'
-    green:   '#99c794'
-    yellow:  '#fac863'
-    blue:    '#6699cc'
-    magenta: '#c594c5'
-    cyan:    '#5fb3b3'
-    white:   '#adb5c0'
-
-
-# # Gruvbox dark theme
+# # Oceanic Next theme
 # colors:
 #   # Default colors
 #   primary:
-#     # hard contrast
-#     background: '#1d2021'
-#     # Normal contrast
-#     # background: '#282828'
-#     # Soft contrast
-#     # background: '#32302f'
-
-#     foreground: '#ebdbb2'
+#     background: '#1b2b34'
+#     foreground: '#d8dee9'
 
 #   # Normal colors
 #   normal:
-#     black:   '#282828'
-#     red:     '#cc241d'
-#     green:   '#98971a'
-#     yellow:  '#d79921'
-#     blue:    '#458588'
-#     magenta: '#b16286'
-#     cyan:    '#689d6a'
-#     white:   '#a89984'
+#     black:   '#29414f'
+#     red:     '#ec5f67'
+#     green:   '#99c794'
+#     yellow:  '#fac863'
+#     blue:    '#6699cc'
+#     magenta: '#c594c5'
+#     cyan:    '#5fb3b3'
+#     white:   '#65737e'
 
 #   # Bright colors
 #   bright:
-#     black:   '#928374'
-#     red:     '#fb4934'
-#     green:   '#b8bb26'
-#     yellow:  '#fabd2f'
-#     blue:    '#83a598'
-#     magenta: '#d3869b'
-#     cyan:    '#8ec07c'
-#     white:   '#ebdbb2'
+#     black:   '#405860'
+#     red:     '#ec5f67'
+#     green:   '#99c794'
+#     yellow:  '#fac863'
+#     blue:    '#6699cc'
+#     magenta: '#c594c5'
+#     cyan:    '#5fb3b3'
+#     white:   '#adb5c0'
+
+
+# Gruvbox dark theme
+colors:
+  # Default colors
+  primary:
+    # hard contrast
+    background: '#1d2021'
+    # Normal contrast
+    # background: '#282828'
+    # Soft contrast
+    # background: '#32302f'
+
+    foreground: '#ebdbb2'
+
+  # Normal colors
+  normal:
+    black:   '#282828'
+    red:     '#cc241d'
+    green:   '#98971a'
+    yellow:  '#d79921'
+    blue:    '#458588'
+    magenta: '#b16286'
+    cyan:    '#689d6a'
+    white:   '#a89984'
+
+  # Bright colors
+  bright:
+    black:   '#928374'
+    red:     '#fb4934'
+    green:   '#b8bb26'
+    yellow:  '#fabd2f'
+    blue:    '#83a598'
+    magenta: '#d3869b'
+    cyan:    '#8ec07c'
+    white:   '#ebdbb2'
 
 
 # # Gruvbox light theme
