tmux.conf updated

--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -2,8 +2,7 @@
 set -g default-terminal "tmux-256color"
 
 # If my terminal supports 24-bit color ("xterm-kitty" it the value of $TERM outside Tmux)
-# set -ga terminal-overrides ",xterm-kitty:Tc"
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -ga terminal-overrides ",xterm-kitty:Tc"
 
 # Move with VIM keybindings in copy mode
 set-window-option -g mode-keys vi
