--- a/files/.config/kitty/kitty.conf
+++ b/files/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrains Mono Regular
-bold_font        JetBrains Mono Bold
-italic_font      JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
+font_family      JetBrains Mono Regular Nerd Font Complete
+bold_font        JetBrains Mono Bold Nerd Font Complete
+italic_font      JetBrains Mono Italic Nerd Font Complete
+bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -1156,42 +1156,42 @@ map ctrl+0 change_font_size all 0
 
 # Gruvbox theme (dark) --------------------------------------------------------
 
-# foreground            #ebdbb2
-# background            #1d2021
-# selection_foreground  #1d2021
-# selection_background  #ebdbb2
+foreground            #ebdbb2
+background            #1d2021
+selection_foreground  #1d2021
+selection_background  #ebdbb2
 
-# # black
-# color0   #282828
-# color8   #928374
+# black
+color0   #282828
+color8   #928374
 
-# # red
-# color1   #cc241d
-# color9   #fb4934
+# red
+color1   #cc241d
+color9   #fb4934
 
-# # green
-# color2   #98971a
-# color10  #b8bb26
+# green
+color2   #98971a
+color10  #b8bb26
 
-# # yellow
-# color3   #d79921
-# color11  #fabd2f
+# yellow
+color3   #d79921
+color11  #fabd2f
 
-# # blue
-# color4  #458588
-# color12 #83a598
+# blue
+color4  #458588
+color12 #83a598
 
-# # magenta
-# color5   #b16286
-# color13  #d3869b
+# magenta
+color5   #b16286
+color13  #d3869b
 
-# # cyan
-# color6   #689d6a
-# color14  #8ec07c
+# cyan
+color6   #689d6a
+color14  #8ec07c
 
-# # white
-# color7   #a89984
-# color15  #ebdbb2
+# white
+color7   #a89984
+color15  #ebdbb2
 
 # Gruvbox theme (light) -------------------------------------------------------
 
@@ -1234,39 +1234,39 @@ map ctrl+0 change_font_size all 0
 
 # Oceanic Next theme ----------------------------------------------------------
 
-foreground            #d8dee9
-background            #1b2b34
-selection_foreground  #d8dee9
-selection_background  #1b2b34
+# foreground            #d8dee9
+# background            #1b2b34
+# selection_foreground  #d8dee9
+# selection_background  #1b2b34
 
-# black
-color0   #29414f
-color8   #405860
+# # black
+# color0   #29414f
+# color8   #405860
 
-# red
-color1   #ec5f67
-color9   #ec5f67
+# # red
+# color1   #ec5f67
+# color9   #ec5f67
 
-# green
-color2   #99c794
-color10  #99c794
+# # green
+# color2   #99c794
+# color10  #99c794
 
-# yellow
-color3   #fac863
-color11  #fac863
+# # yellow
+# color3   #fac863
+# color11  #fac863
 
-# blue
-color4  #6699cc
-color12 #6699cc
+# # blue
+# color4  #6699cc
+# color12 #6699cc
 
-# magenta
-color5   #c594c5
-color13  #c594c5
+# # magenta
+# color5   #c594c5
+# color13  #c594c5
 
-# cyan
-color6   #5fb3b3
-color14  #5fb3b3
+# # cyan
+# color6   #5fb3b3
+# color14  #5fb3b3
 
-# white
-color7   #65737e
-color15  #adb5c0
+# # white
+# color7   #65737e
+# color15  #adb5c0
